--- a/core.html
+++ b/core.html
@@ -67,7 +67,7 @@
           <h3>Richard Al-Ghifary</h3>
           <p>
             Putra Ke (2) Dari <br />
-            Bapak (Reymon) <br />
+            Alm. Bapak (Reymon) <br />
             Dan Ibu (Karmila)
           </p>
           <a
